# predictive-sales-lightning

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
306119735402248229/021f5886ac7540998c4e58340064192e/checkpoints/: epoch=9-step=90.ckpt
306119735402248229/0356bd4fd5844c6582d311663231cf44/checkpoints/: epoch=9-step=90.ckpt
306119735402248229/0809be09cc4b4e22bf46f8465b5defee/checkpoints/: epoch=9-step=90.ckpt
306119735402248229/0b62067ede6241e2ad334a9fc5354f57/checkpoints/: epoch=9-step=90.ckpt
306119735402248229/19e605606708435886a2991469d3dd7d/checkpoints/: epoch=9-step=90.ckpt
306119735402248229/250d62bb075142c28dbcfaa4438d25e9/checkpoints/: epoch=9-step=90.ckpt
306119735402248229/529022780e05443d97865717f8a0ffba/checkpoints/: epoch=9-step=90.ckpt
306119735402248229/52ea716917eb4611b03d0abbfbdd571f/checkpoints/: epoch=9-step=90.ckpt
checkpoints/: model.ckpt  model_beauty.ckpt  model_clothing.ckpt  model_electronics.ckpt  normalization.json  normalization_clothing.json  normalization_electronics.json
data/raw/: sales_data.xlsx
docs/: README.md  architecture.md  handin.md
src/app/: main.py  streamlit_dashboard.py
src/app/api/: predict.py  train.py
src/app/services/: forecaster.py  (+1 more)
src/config/: config.yaml  schema.py  utils.py
src/scripts/: train.py
src/utils/: data_preview.py
tests/app/: test_health.py  test_predict.py
tests/ml/: test_data_module.py  test_model.py
tests/scripts/: test_train.py
tests/utils/: __init__.py
(+29 files in other folders)
